--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="styles.css">  
+    <link rel="stylesheets" href="ColoredBoxes/styles.css">  
     <title>Colored Boxes</title>
 </head>
 <body>
